--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/BuscarCantante.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/BuscarCantante.form
@@ -22,12 +22,20 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jpanelA" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+              <Component id="jpanelA" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jpanelA" alignment="0" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jpanelA" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -47,24 +55,27 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jblNombreBuscarCantante" min="-2" pref="58" max="-2" attributes="0"/>
-                      <Component id="jblIdBuscarCantante" min="-2" max="-2" attributes="0"/>
-                      <Component id="jblApellidoBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
-                      <Component id="jblEdadBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
-                      <Component id="jblNacionalidadBuscarCantante" min="-2" pref="86" max="-2" attributes="0"/>
-                      <Component id="jblSalarioBuscarCantante" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
-                      <Component id="jblNombreArtisticoBuscarCantante" min="-2" pref="118" max="-2" attributes="0"/>
-                      <Component id="jblGeneroMusical" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
-                      <Component id="jblNumeroSencillosBuscarCantante" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
-                      <Component id="jblNumeroConciertosBuscarCantante" min="-2" pref="133" max="-2" attributes="0"/>
-                      <Component id="jblNumeroGirasBuscarCantante" min="-2" pref="133" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="162" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="295" max="-2" attributes="0"/>
                           <Component id="bntAceptar" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                          <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" alignment="1" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jblNombreBuscarCantante" min="-2" pref="58" max="-2" attributes="0"/>
+                              <Component id="jblIdBuscarCantante" min="-2" max="-2" attributes="0"/>
+                              <Component id="jblApellidoBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
+                              <Component id="jblEdadBuscarCantante" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
+                              <Component id="jblNacionalidadBuscarCantante" min="-2" pref="86" max="-2" attributes="0"/>
+                              <Component id="jblSalarioBuscarCantante" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                              <Component id="jblNombreArtisticoBuscarCantante" min="-2" pref="118" max="-2" attributes="0"/>
+                              <Component id="jblGeneroMusical" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
+                              <Component id="jblNumeroSencillosBuscarCantante" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
+                              <Component id="jblNumeroConciertosBuscarCantante" min="-2" pref="133" max="-2" attributes="0"/>
+                              <Component id="jblNumeroGirasBuscarCantante" min="-2" pref="133" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="txtNombre" min="-2" pref="164" max="-2" attributes="0"/>
@@ -79,23 +90,29 @@
                               <Component id="txtNumeroConciertos" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
                               <Component id="txtNumeroGiras" min="-2" pref="164" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
-                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jblIdBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtID" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -150,13 +167,9 @@
                               <Component id="jblNumeroGirasBuscarCantante" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtNumeroGiras" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace pref="114" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="bntAceptar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -323,6 +336,13 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/imagenes/Buscar (1).png"/>
+            </Property>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
